# PhotoLibrary

./: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  examples.cpp  main.cpp
src/Adapter/: DBInterface.h  Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  RelationsDBInterface.cpp  RelationsDBInterface.h  SQLQuerry.cpp  SQLQuerry.h  suppport.cpp  suppport.h
src/Backend/: BackendFactory.cpp  BackendFactory.h  CMakeLists.txt  FactoryBase.h  InterfaceBase.h  RelationsInterfaceBase.h
src/Backend/DatabaseInterface/: DBInterface.h  DatabaseFactory.cpp  DatabaseFactory.h  RelationsDBInterface.cpp  RelationsDBInterface.h  suppport.cpp  suppport.h
src/Backend/Record/: AlbumRecord.h  DirectoryRecord.h  KeywordRecord.h  Options.h  PhotoRecord.h  Record.h
src/DatabaseInterface/: AccessTables.h  CMakeLists.txt  Record.h  RelationsTable.cpp  RelationsTable.h  exceptions.h  support.h
src/GUI/: AlbumModelColumns.h  AlbumStore.cpp  AlbumStore.h  AlbumView.cpp  AlbumView.h  BaseTreeStore.h  BaseTreeView.h  CentrePane.cpp  CentrePane.h  DirectoryModelColumns.h  DirectoryStore.cpp  DirectoryStore.h  DirectoryView.cpp  DirectoryView.h  EditKeywordDialogue.cpp  EditKeywordDialogue.h  GUIMain.cpp  GUIMain.h  KeywordModelColumns.h  KeywordsStore.cpp  KeywordsStore.h  KeywordsView.cpp  KeywordsView.h  LeftPane.h  MainWindow.cpp  MainWindow.h  NewAlbumDialogue.cpp  NewAlbumDialogue.h  NewKeywordDialogue.cpp  NewKeywordDialogue.h  PhotoDrawingArea.cpp  PhotoDrawingArea.h  PhotoTile.cpp  PhotoTile.h  RenameAlbumDialogue.cpp  RenameAlbumDialogue.h  RightPane.h  SidePaneElement.h
src/GUI/resources/: grey_pixel.xml
src/SQLiteAdapter/: CMakeLists.txt  Concepts.h  Database.cpp  Database.h  SQLQuerry.cpp  SQLQuerry.h
src/Support/: Concepts.h  ThreadSafeQueue.h
src/resources/: grey_pixel.cc
tests/: AccessTables_tests.cpp  AccessTables_tests.h  AlbumInterface_test.cpp  AlbumRecord_test.cpp  CMakeLists.txt  DatabaseInterface_tests.cpp  DatabaseInterface_tests.h  DirectoryInterface_test.cpp  DirectoryRecord_test.cpp  KeywordInterface_test.cpp  KeywordRecord_test.cpp  PhotoInterface_test.cpp  PhotoRecord_test.cpp  PhotosAlbumsRelationsInterface_test.cpp  PhotosKeywordsRelationsInterface_test.cpp  RelationsTable_test.cpp  ThreadSafeQueue_tests.cpp  suppport_test.cpp  test.cpp
